# glpp

./: .gitignore  CMakeLists.txt  CODING  Doxyfile  LICENSE.txt  README.md  index.html  params.json
cmake/modules/: FindAssimp.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLM.cmake
doc/html/: annotated.html  annotated.js  classes.html  classglpp_1_1named__object-members.html  classglpp_1_1named__object.html  classglpp_1_1named__object.js  classglpp_1_1utils_1_1bitflags-members.html  classglpp_1_1utils_1_1bitflags.html  classglpp_1_1utils_1_1bitflags.js  dir_5af259b74417d4e80da2ce6935aa98ba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_f56ca9b92e8cd88a346529bb5cae4c62.html  doxygen.css  exclusive_glpp_api.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x7e.html  functions_dup.js  functions_enum.html  functions_func.html  functions_func.js  functions_func_0x62.html  (+141 more)
doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_6c.js  classes_6e.js  classes_6f.js  classes_70.js  classes_72.js  classes_73.js  classes_74.js  classes_75.js  classes_76.js  enums_61.js  enums_62.js  enums_63.js  enums_66.js  enums_6d.js  enums_70.js  enums_73.js  (+47 more)
examples/: CMakeLists.txt
examples/common/: CMakeLists.txt  camera.cpp  camera.hpp  commons.hpp  cube.cpp  cube.hpp  effect.cpp  effect.hpp  geometry.cpp  geometry.hpp  internal.hpp  light.cpp  light.hpp  material.cpp  material.hpp  math.hpp  mouse_drag.hpp  plane.cpp  plane.hpp  post_effects.cpp  post_effects.hpp  scene.cpp  scene.hpp  skybox.cpp  skybox.hpp  sphere.cpp  sphere.hpp
examples/instances/: main.cpp
examples/lighting_phong/: CMakeLists.txt  interleaved.frag  main.cpp  main.frag  phong.frag  phong.hsh  phong.vert  position.vert  wave.vert
examples/resources/: CMakeLists.txt  instances.frag  instances.vert  main.vert  noise.vert  rtt_persp.frag  rtt_persp.vert  triangle.vert
examples/resources/effects/: blend_texture2d.vert  debug.frag  debug.vert  main.frag  main.vert  phong.hsh  phong.vert  position.vert  reflection.vert
examples/resources/models/: monkey.ply  monkey_low.ply  monkey_painted.dae
examples/rtt/: CMakeLists.txt  main.cpp
examples/scene/: CMakeLists.txt  blend_texture2d.frag  bump.frag  bump.vert  dark.frag  debug_normals.frag  main.cpp  normals.frag  normals.vert  pfx_blur.frag  pfx_default.frag  pfx_default.vert  pfx_oldconsole.frag  pfx_underwater.frag  phong.frag  reflection.frag  skybox.frag  skybox.vert
examples/texture/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
examples/uniform_blocks/: main.cpp  unblocks.frag  unblocks.vert
src/: CMakeLists.txt
src/glpp/: CMakeLists.txt  base.hpp  blend_unit.cpp  blend_unit.hpp  boost_support.hpp  buffer.cpp  buffer.hpp  capabilities_unit.cpp  capabilities_unit.hpp  context.cpp  context.hpp  cxx11_support.hpp  depth_test_unit.cpp  depth_test_unit.hpp  exception.hpp  face_cull_unit.cpp  face_cull_unit.hpp  frame_buffer.cpp  frame_buffer.hpp  global_uniform.cpp  global_uniform.hpp  glpp.hpp  logicop_unit.cpp  logicop_unit.hpp  program.cpp  program.hpp  render_buffer.cpp  render_buffer.hpp  scissor_test_unit.cpp  scissor_test_unit.hpp  setup.hpp  shader.cpp  shader.hpp  stencil_test_unit.cpp  stencil_test_unit.hpp  texture.cpp  texture.hpp  texture_unit.cpp  texture_unit.hpp  types.hpp  (+6 more)
src/glpp/utils/: info.cpp  info.hpp
